Improvise dump execution process

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 appdirs==1.4.3
 distorm3==3.3.4
 Django==1.8.17
+django-crispy-forms==1.6.1
 django-filter==1.0.1
 django-guardian==1.4.6
 djangorestframework==3.5.3
+html5lib==1.0b8
 olefile==0.44
 packaging==16.8
+Pillow==4.0.0
 pycrypto==2.6.1
 pyparsing==2.2.0
 PyPDF2==1.26.0
